--- a/youtube_tos.html
+++ b/youtube_tos.html
@@ -72,5 +72,6 @@
         </ul>
         <a href="index.html" class="back-button">Go Back</a>
     </div>
+<script src="js/youtube.js"></script>
 </body>
 </html>
